More checkstyle fixes